2009-03-05  Benjamin Mack  <benni@typo3.org>

	* Fixed #10600: Cleaned up sysext usersetup module code (part 1) and the table method in template.php

2009-03-05  Ingo Renner  <ingo@typo3.org>

	* Added unit tests for the caching framework file backend (backported from FLOW3) (part of #10614)
	* Added unit tests for the caching framework memcached backend (backported from FLOW3) (part of #10614)
	* Added unit tests for the caching framework APC backend (backported from FLOW3) (part of #10614)
	* Added unit tests for the caching framework abstract frontend (backported from FLOW3) (part of #10614)
	* Added unit tests for the caching framework variable frontend (backported from FLOW3) (part of #10614)
	* Added unit tests for the caching framework string frontend (backported from FLOW3) (part of #10614)

2009-03-04  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #10599: Set extAdmEnabled=true when enabling frontend editing for extension compatibility

2009-03-04  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9974: Use PHP built-in gzip/deflate compression in Frontend

2009-03-03  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #9779: t3lib_div::trimExplode limit parameter leads to wrong result with non-empty requirement
	* Fixed bug #10497: Mark t3lib_div::makeInstanceClassName() as deprecated
	* Fixed bug #10581: Use $this->fixedL for list title length

2009-03-03  Michael Stucki  <michael@typo3.org>

	* TEMPORARY (remove when solved): Disable output of deprecation messages until error handling is implemented.

2009-03-03  Benjamin Mack  <benni@typo3.org>

	* Fixed #9783: Updated prototype.js to the latest 1.6.0.3 release (thanks to Steffen Gebert)

2009-03-01  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #10528: Wrong content in pagetree frame after page creation in Opera

2009-03-01  Benjamin Mack  <benni@typo3.org>
