@@ -1,3 +1,7 @@
+2009-03-06  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #10610: htmlArea RTE: Two errors in class.tx_rtehtmlarea_acronym.php (Thanks to Ursula Renziehausen).
+
 2009-02-25  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #10547: htmlARea RTE: tx_rtehtmlarea_clearrtecache::clearTempDir should use resolveBackPath
